<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp" 
        android:gravity="center">

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="gameOverScreen"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textOpponentName"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text=""
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="0dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" >

            <TextView
                android:id="@+id/topWord1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp" />
            
            <TextView
                android:id="@+id/topWord2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/centerWord"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_horizontal|center_vertical"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5" >

            <TextView
                android:id="@+id/bottomWord1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp" />
            
            <TextView
                android:id="@+id/bottomWord2"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:gravity="center" >

        <Button
            android:id="@+id/buildButton"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/build" />

        <Button
            android:id="@+id/challengeButton"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/challenge" />

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:scrollbars="none" 
        android:fadingEdgeLength="0dp"
        android:overScrollMode="never" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal">

            <ImageButton
                android:id="@+id/buttonA"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:src="@drawable/a"
                android:contentDescription="@string/letterA"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonB"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/b"
                android:contentDescription="@string/letterB"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonC"
				android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/c"
                android:contentDescription="@string/letterC"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonD"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/d"
                android:contentDescription="@string/letterD"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonE"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/e"
                android:contentDescription="@string/letterE"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonF"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/f"
                android:contentDescription="@string/letterF"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonG"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/g"
                android:contentDescription="@string/letterG"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonH"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/h"
                
                android:contentDescription="@string/letterH"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonI"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/i"
                android:contentDescription="@string/letterI"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonJ"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/j"
                android:contentDescription="@string/letterJ"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonK"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/k"
                android:contentDescription="@string/letterK"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonL"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/l"
                android:contentDescription="@string/letterL"
                android:background="@null" />
            
            <ImageButton
                android:id="@+id/buttonM"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/m"
                android:contentDescription="@string/letterM"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonN"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/n"
                android:contentDescription="@string/letterN"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonO"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/o"
                android:contentDescription="@string/letterO"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonP"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/p"
                android:contentDescription="@string/letterP"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonQ"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent" 
                android:src="@drawable/q"
                android:contentDescription="@string/letterQ"
                android:background="@null" />
            
            <ImageButton
                android:id="@+id/buttonR"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/r"
                android:contentDescription="@string/letterR"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonS"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/s"
                android:contentDescription="@string/letterS"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonT"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/t"
                android:contentDescription="@string/letterT"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonU"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/u"
                android:contentDescription="@string/letterU"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonV"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/v"
                android:contentDescription="@string/letterV"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonW"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/w"
                android:contentDescription="@string/letterW"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonX"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/x"
                android:contentDescription="@string/letterX"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonY"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/y"
                android:contentDescription="@string/letterY"
                android:background="@null" />

            <ImageButton
                android:id="@+id/buttonZ"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:src="@drawable/z"
                android:contentDescription="@string/letterZ"
                android:background="@null" />
            
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>
