<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome" 
        android:textSize = "60sp" />
	
	<TextView
        android:id="@+id/nameChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose" 
        android:textSize = "40sp" />
	
    <EditText
        android:id="@+id/enter_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="40sp" />

</LinearLayout>
