<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text=""
        android:textSize = "60sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7" >

        <Button
            android:id="@+id/LongestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/longest" />

        <Button
            android:id="@+id/Friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LongestButton"
            android:layout_centerHorizontal="true"
            android:text="@string/friend" />

        <Button
            android:id="@+id/buttonSignOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/newUser" />

        <Button
            android:id="@+id/ShortestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/LongestButton"
            android:layout_alignLeft="@+id/LongestButton"
            android:onClick="MainMenu"
            android:text="@string/shortest" />

    </RelativeLayout>

</LinearLayout>