<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GameOver" 
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonQuit"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/back" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="fill_parent"
            android:text="" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_weight="7"
        android:layout_width="fill_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="2"
        android:gravity="center">

        <Button
            android:id="@+id/buttonReplay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="replay"
            android:text="@string/again" />

        <Button
            android:id="@+id/buttonNewPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mainScreen"
            android:text="@string/newPlayer" />
    </LinearLayout>

</LinearLayout>
